style.css
html {
    position: relative;
    min-height: 100%;
}

body {
    padding-top: 50px;
    background-image: url("images/bg-denim.png");
    background-attachment:fixed;
/*    padding-bottom: 50px; */
}

form {
  right: 10px;
  top: 10px;
}

/*
.jumbotron {
	background-color: #12B2A7;
    background-size:cover;
    color: #ffffff;
}
*/

.jumbotron {
    background-image: url("images/bg-red.png");	
    color: #ffffff;
}

.row {
	margin-bottom: 25px;
}

.col-centered {
    float: none;
    margin: 0 auto;
}

.col-md-4 {
    padding-bottom: 5px;
}

/*.btn {
	background: #0D4F8B;
	color: #ffffff;
}*/


.panel {
	width: 90%;
	margin-right: auto;
	margin-left: auto;
}


.content {
    min-height:20px;
    width: 90%;
    padding:15px;
    padding-top: 30px;
    margin-top: 10px;
    margin-bottom:20px;
    background-color:#ffffff;
    border:1px solid #e3e3e3;
    border-radius:4px;
    -webkit-box-shadow:inset 0 1px 1px rgba(0,0,0,.05);
    box-shadow:inset 0 1px 1px rgba(0,0,0,.05);
}

.footer {
	color: #777;
	background-color: #f0f0f0;
    position: absolute;
    bottom: 0;
    width: 100%;
    height: 50px;
}

.img-thumbnail {
    margin-left: auto;
    margin-right: auto;
    width:100%;
    max-width: 50vh;
}

.leaflet-control-layers-expanded {
	font-family: sans-serif;
    padding-left: 15px;
    padding-bottom: 15px;
}

#accordion {
	margin: 15px;
}

#map {
    min-height: 500px;
	height: 98%;
	width: 100%;
}		    

#galileo {
    margin-left: auto;
    margin-right: auto;
	max-width: 30vw;
}

#house {
	margin-left: auto;
	margin-right: auto;
}

#mySched8224 {
  background: #FFFFFF;
  border: 1px solid #CCCCCC;
  border-radius: 4px;
  color: #333333;
  font: 14px Arial, Helvetica, Verdana;
  padding: 8px 20px;
  cursor: pointer;
}

#mySched8224:hover {
  opacity: 0.9;
}

